# OOPcoursework

./: README.md  index.html  main.py  pyproject.toml
data/: datafile.json
setting/: log_setting.py  setting.py
src/: other_utils.py  utils_api.py  utils_filework.py  utils_vacancies.py
tests/: conftest.py  test_main.py  test_other_utils.py  test_utils_api.py  test_utils_filework.py  test_utils_vacancies.py
