[tool.poetry]
name = "oop-course-work"
version = "0.1.0"
description = ""
authors = ["SIginashev <sergey.iginashev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
